--- a/src/gui/ViewFuncionario.fxml
+++ b/src/gui/ViewFuncionario.fxml
@@ -2,7 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -12,15 +13,22 @@
       <TextField fx:id="txtIdFuncionario" layoutX="174.0" layoutY="61.0" promptText="ID fo funcionário" />
       <Label layoutX="149.0" layoutY="65.0" text="ID:" />
       <TextField fx:id="txtNomeFuncionario" layoutX="174.0" layoutY="97.0" promptText="Nome do Funcionário" />
-      <Label layoutX="131.0" layoutY="101.0" text="Nome:" />
-      <TextField fx:id="txtSalarioFuncionario" layoutX="176.0" layoutY="131.0" promptText="Salário do Funcionário" />
-      <Label layoutX="129.0" layoutY="135.0" prefHeight="17.0" prefWidth="50.0" text="Salário:" />
+      <Label layoutX="127.0" layoutY="101.0" text="Nome:" />
+      <TextField fx:id="txtSalarioFuncionario" layoutX="175.0" layoutY="131.0" promptText="Salário do Funcionário" />
+      <Label layoutX="120.0" layoutY="136.0" prefHeight="17.0" prefWidth="50.0" text="Salário:" />
       <Button fx:id="btCriaFuncionario" layoutX="361.0" layoutY="169.0" mnemonicParsing="false" onAction="#onBtCriaFuncionarioAction" text="Criar" />
       <Label layoutX="120.0" layoutY="22.0" text="Digite os dados do novo funcionario">
          <font>
             <Font name="Arial Bold" size="15.0" />
          </font></Label>
-      <ListView fx:id="listFuncionario" layoutX="25.0" layoutY="256.0" onMouseClicked="#mudaFuncionario1" prefHeight="314.0" prefWidth="209.0" />
-      <ListView fx:id="listExclucaoFuncionario" layoutX="270.0" layoutY="256.0" onMouseClicked="#mudaFuncionario2" prefHeight="314.0" prefWidth="209.0" />
+      <TableView fx:id="tvFuncionario" layoutX="9.0" layoutY="232.0" prefHeight="316.0" prefWidth="481.0">
+        <columns>
+          <TableColumn fx:id="colunaNome" prefWidth="197.0" text="Nome" />
+          <TableColumn fx:id="colunaId" minWidth="0.0" prefWidth="84.0" text="ID" />
+            <TableColumn fx:id="colunaSalario" prefWidth="107.0" text="Salario" />
+            <TableColumn fx:id="colunaSelect" prefWidth="92.0" text="Excluir?" />
+        </columns>
+      </TableView>
+      <Button fx:id="btExcluiFuncionario" layoutX="411.0" layoutY="560.0" mnemonicParsing="false" onAction="#excluirFuncionario" text="Excluir" />
    </children>
 </AnchorPane>
