--- a/src/gui/ViewCliente.fxml
+++ b/src/gui/ViewCliente.fxml
@@ -37,5 +37,6 @@
       <Label layoutX="97.0" layoutY="529.0" prefHeight="25.0" prefWidth="454.0" text="Selecione os funcionários na coluna &quot;Excluir&quot; e aperte o botão abaixo para deleta-los!" />
       <Button fx:id="btVoltar" layoutX="12.0" layoutY="9.0" mnemonicParsing="false" onAction="#onBtVoltarAction" prefHeight="25.0" prefWidth="70.0" text="Voltar" />
       <Line endX="885.0" endY="6.0" layoutX="-249.0" layoutY="39.0" startX="249.0" startY="6.0" stroke="#827f7f" />
+      <Button fx:id="btDesfazer" layoutX="97.0" layoutY="9.0" mnemonicParsing="false" onAction="#onBtDesfazerAction" prefHeight="25.0" prefWidth="36.0" text="&lt;-" />
    </children>
 </AnchorPane>
