--- a/src/gui/view/ViewCaixa.fxml
+++ b/src/gui/view/ViewCaixa.fxml
@@ -15,7 +15,7 @@
    <children>
       <Button fx:id="btVoltar" layoutX="9.0" layoutY="4.0" mnemonicParsing="false" onAction="#onBtVoltarAction" prefHeight="25.0" prefWidth="70.0" text="Voltar" />
       <Line endX="975.2928466796875" layoutX="161.0" layoutY="35.0" startX="-161.0" stroke="#827f7f" />
-      <Button fx:id="btAbrirFecharCaixa" layoutX="21.0" layoutY="55.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="46.0" prefWidth="130.0">
+      <Button fx:id="btAbrirFecharCaixa" layoutX="12.0" layoutY="55.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="46.0" prefWidth="150.0">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Button>
@@ -31,7 +31,7 @@
       <DatePicker fx:id="dpData" layoutX="11.0" layoutY="342.0" prefHeight="25.0" prefWidth="150.0" />
       <TextField fx:id="tfValor" layoutX="12.0" layoutY="393.0" prefHeight="26.0" prefWidth="151.0" />
       <Label layoutX="14.0" layoutY="376.0" text="Valor:" />
-      <Button fx:id="btEnviarTransacao" layoutX="93.0" layoutY="493.0" mnemonicParsing="false" onAction="#onBtEnviarTransacaoAction" text="Adicionar" />
+      <Button fx:id="btEnviarTransacao" layoutX="80.0" layoutY="493.0" mnemonicParsing="false" onAction="#onBtEnviarTransacaoAction" text="Adicionar" />
       <Label layoutX="34.0" layoutY="137.0" text="Adicione os valores" />
       <Label layoutX="46.0" layoutY="154.0" text="Das transações" />
       <TableView fx:id="tvTransacao" layoutX="172.0" layoutY="118.0" prefHeight="410.0" prefWidth="963.0">
@@ -60,7 +60,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label fx:id="lbStatus" layoutX="331.0" layoutY="4.0" prefHeight="30.0" prefWidth="151.0" textFill="#10bf24">
+      <Label fx:id="lbStatus" layoutX="358.0" prefHeight="30.0" prefWidth="151.0" textFill="#10bf24">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
@@ -101,7 +101,7 @@
          </font>
       </Label>
       <Button fx:id="btCalTroco" layoutX="394.0" layoutY="64.0" mnemonicParsing="false" onAction="#calculaTroco" prefHeight="16.0" prefWidth="13.0" text="=" />
-      <Button fx:id="btAtualizar" layoutX="91.0" layoutY="4.0" mnemonicParsing="false" onAction="#onBtAtualizarAction" prefHeight="25.0" prefWidth="70.0" text="Atualizar" />
+      <Button fx:id="btAtualizar" layoutX="91.0" layoutY="4.0" mnemonicParsing="false" onAction="#onBtAtualizarAction" prefHeight="26.0" prefWidth="80.0" text="Atualizar" />
       <Line endX="1018.0" endY="1.0" layoutX="116.0" layoutY="528.0" startX="56.0" stroke="#827f7f" />
       <Button fx:id="btExcluir" layoutX="184.0" layoutY="538.0" mnemonicParsing="false" onAction="#excluirTransacao" prefHeight="25.0" prefWidth="70.0" text="Excluir" />
       <Label layoutX="271.0" layoutY="542.0" text="Excluir transações selecionadas" />
