--- a/src/gui/view/ViewAtualizaFuncionario.fxml
+++ b/src/gui/view/ViewAtualizaFuncionario.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="292.0" prefWidth="529.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.ViewAtualizaFuncionarioController">
+<AnchorPane prefHeight="325.0" prefWidth="536.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.ViewAtualizaFuncionarioController">
    <children>
-      <Line endX="-105.0" endY="212.0" layoutX="325.0" layoutY="79.0" startX="-104.5" startY="-79.0" stroke="#827f7f" />
+      <Line endX="-104.5" endY="248.0" layoutX="333.0" layoutY="77.0" startX="-104.5" startY="-79.0" stroke="#827f7f" />
       <TextField fx:id="txtIdFuncionario" layoutX="309.0" layoutY="95.0" promptText="ID do funcionário" />
       <Label layoutX="284.0" layoutY="99.0" text="ID:" />
       <TextField fx:id="txtNomeFuncionario" layoutX="309.0" layoutY="131.0" promptText="Nome do funcionário" />
@@ -19,16 +19,18 @@
       <TextField fx:id="txtSalarioFuncionario" layoutX="310.0" layoutY="165.0" promptText="Salario do funcionário" />
       <Label layoutX="265.0" layoutY="169.0" prefHeight="17.0" prefWidth="36.0" text="Salario" />
       <Button fx:id="btAtualiza" layoutX="395.0" layoutY="241.0" mnemonicParsing="false" onAction="#onAtualizaFuncionarioAction" prefHeight="26.0" prefWidth="87.0" text="Atualizar" />
-      <Label layoutX="247.0" layoutY="32.0" prefHeight="26.0" prefWidth="280.0" text="Digite os novos dados:">
+      <Label layoutX="246.0" layoutY="32.0" prefHeight="26.0" prefWidth="280.0" text="Digite os novos dados:">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
       </Label>
-      <TableView fx:id="tvFuncionario" onMouseClicked="#selecionaFuncionario" prefHeight="297.0" prefWidth="221.0">
+      <TableView fx:id="tvFuncionario" layoutY="37.0" onMouseClicked="#selecionaFuncionario" prefHeight="288.0" prefWidth="228.0">
          <columns>
             <TableColumn fx:id="colunaId" minWidth="0.0" prefWidth="40.0" text="ID" />
             <TableColumn fx:id="colunaNome" prefWidth="180.0" text="Nome" />
          </columns>
       </TableView>
+      <Line endX="-199.0" endY="145.2928924560547" layoutX="199.0" layoutY="-109.0" startX="28.0" startY="145.99998474121094" stroke="#827f7f" />
+      <Button fx:id="btVoltar" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" onAction="#voltaScene" prefHeight="16.0" prefWidth="62.0" text="Voltar" />
    </children>
 </AnchorPane>
